--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -115,6 +115,7 @@
     <uses-permission android:name="android.permission.READ_APP_SPECIFIC_LOCALES" />
     <uses-permission android:name="android.permission.QUERY_ADMIN_POLICY" />
     <uses-permission android:name="android.permission.READ_SAFETY_CENTER_STATUS" />
+    <uses-permission android:name="android.permission.START_VIEW_APP_FEATURES" />
 
     <application
             android:name=".SettingsApplication"
