New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (16/n).
- Add the entry to "Anything else?" screen
1) Add the new activity-alias tag ".TextReadingForSetupWizardActivity", including the fragment class, action, and targetActivity.
2) Temporarily use the “DISPLAY_SETTINGS” category to trigger “.TextReadingForSetupWizardActivity” to ensure the backward compatibility.
3) Add the text reading settings page entry into SettingsGateway to be successfully launched from SuW.

Bug: 211503117
Test: manual test
Change-Id: I5c35df3c33c713342a7a0cfad786b7ae48ad941f

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1951,7 +1951,6 @@
             android:targetActivity=".accessibility.AccessibilitySettingsForSetupWizardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="com.android.settings.suggested.category.DISPLAY_SETTINGS" />
             </intent-filter>
             <meta-data android:name="com.android.settings.title"
                 android:resource="@string/vision_settings_suggestion_title" />
@@ -1959,6 +1958,29 @@
                 android:value="true" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.accessibility.AccessibilitySettingsForSetupWizard" />
+        </activity-alias>
+
+        <activity-alias
+            android:name=".TextReadingForSetupWizardActivity"
+            android:exported="true"
+            android:icon="@drawable/ic_font_download"
+            android:targetActivity=".accessibility.AccessibilitySettingsForSetupWizardActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <!-- TODO(b/1352717): Consider replacing it with another category, temporarily
+                using an older one to avoid side problems. -->
+                <category android:name="com.android.settings.suggested.category.DISPLAY_SETTINGS" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.android.settings.title"
+                android:resource="@string/accessibility_text_reading_options_title" />
+            <meta-data
+                android:name="com.android.settings.icon_tintable"
+                android:value="true" />
+            <meta-data
+                android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.accessibility.TextReadingPreferenceFragmentForSetupWizard" />
         </activity-alias>
 
         <activity
