Add CHANGE_WIFI_STATE request to PICK_WIFI_NETWORK intent
- Add CHANGE_WIFI_STATE permission to WifiPickerActivity

Bug: 183410556
Test: manual test
Use b/183410556#comment4 app-debug.apk to verify the solution

Change-Id: Ie9295c129bc87cb66c67377db64ba716046e9daf

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -410,6 +410,7 @@
 
         <activity
             android:name=".wifi.WifiPickerActivity"
+            android:permission="android.permission.CHANGE_WIFI_STATE"
             android:exported="true">
             <intent-filter android:priority="1">
                 <action android:name="android.net.wifi.PICK_WIFI_NETWORK" />
