--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
-        package="com.android.settings"
-        coreApp="true"
-        android:sharedUserId="android.uid.system">
+          package="com.android.settings"
+          coreApp="true"
+          android:sharedUserId="android.uid.system">
 
-    <original-package android:name="com.android.settings" />
+    <original-package android:name="com.android.settings"/>
 
     <uses-permission android:name="android.permission.REQUEST_NETWORK_SCORES" />
     <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
@@ -2918,6 +2917,24 @@
                        android:value="@string/menu_key_display"/>
             <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
                 android:value="true" />
+        </activity>
+
+        <activity android:name=".dream.DreamSetupActivity"
+                  android:exported="true"
+                  android:immersive="true"
+                  android:theme="@style/SudThemeGlif.DayNight"
+                  android:icon="@drawable/ic_settings_display">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="com.android.settings.suggested.category.SCREEN_SAVER"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.is_supported"
+                       android:resource="@bool/dream_setup_supported"/>
+            <meta-data android:name="com.android.settings.title"
+                       android:resource="@string/dream_setup_title"/>
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/dream_setup_description"/>
+            <meta-data android:name="com.android.settings.icon_tintable" android:value="true"/>
         </activity>
 
         <activity
