--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4340,6 +4340,13 @@
                        android:value="true" />
         </activity>
 
+        <receiver android:name=".safetycenter.SafetySourceBroadcastReceiver"
+                  android:exported="true">
+            <intent-filter>
+                <action android:name="android.safetycenter.action.REFRESH_SAFETY_SOURCES"/>
+            </intent-filter>
+        </receiver>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
