--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2968,7 +2968,8 @@
         <activity
             android:name=".users.AddSupervisedUserActivity"
             android:label="@*android:string/supervised_user_creation_label"
-            android:icon="@drawable/ic_settings_multiuser">
+            android:icon="@drawable/ic_settings_multiuser"
+            android:exported="true">
         </activity>
 
         <activity
