--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4367,6 +4367,7 @@
                   android:exported="true">
             <intent-filter>
                 <action android:name="android.safetycenter.action.REFRESH_SAFETY_SOURCES"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
 
