Enable GWPAsan for Settings
Enable this to detect memory bugs.

Fixes: 220248277
Test: Local start up time test and memory usage test.
Change-Id: I529507931f372f1e1f7bf6ae580fdb35651e6bd0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -129,7 +129,8 @@
             android:usesCleartextTraffic="true"
             android:defaultToDeviceProtectedStorage="true"
             android:directBootAware="true"
-            android:appComponentFactory="androidx.core.app.CoreComponentFactory">
+            android:appComponentFactory="androidx.core.app.CoreComponentFactory"
+            android:gwpAsanMode="always">
 
         <uses-library android:name="org.apache.http.legacy" />
 
