Set higher priority for ADD_DEVICE_ADMIN intent
Settings should set android:priority of the intent-filter > 1
so that regular apps can't provide an alternative.

Test: Rebuilt apk
Fix: 197960672
Change-Id: Ic12db4fa5e6a5f803930deba2a81254c375403df

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1846,7 +1846,7 @@
                   android:exported="true"
                   android:clearTaskOnLaunch="true"
                   android:theme="@style/Theme.Settings.NoActionBar">
-            <intent-filter>
+            <intent-filter android:priority="1000">
                 <action android:name="android.app.action.ADD_DEVICE_ADMIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
