[Settings] Avoid popup activity get bringup from recent history
A popup dialog is designed to sit on top of an single instance activity.
Although activity might #finish(), but will be restarted due to staying
in the recent history.

Remove it from recent history may allow end user not seeing that UI.

Bug: 202033230
Test: local
Change-Id: Id1d52eefb90d011296495f39b1533a1af68435f1
(cherry picked from commit f81eaeb8facf81fd1542cf510915913df254ca01)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4294,6 +4294,7 @@
             android:name=".sim.ChooseSimActivity"
             android:theme="@style/GlifV3Theme.DayNight.NoActionBar"
             android:launchMode="singleInstance"
+            android:excludeFromRecents="true"
             android:exported="false"/>
 
         <activity
