Create activity for BluetoothDashboardFragment.
This activity will be launched by clicking on a notification sent from the bluetooth server.

Bug: 342407973
Test: manual
Change-Id: Ie05c096e98c1de74d994be46967c8dd90887169a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5191,6 +5191,18 @@
             android:theme="@style/Theme.SpaLib.Dialog">
         </activity>
 
+        <activity android:name="Settings$BluetoothDashboardActivity"
+            android:label="@string/bluetooth_settings_title"
+            android:permission="android.permission.BLUETOOTH_CONNECT"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.settings.BLUETOOTH_DASHBOARD_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.connecteddevice.BluetoothDashboardFragment"/>
+        </activity>
+
         <activity
             android:name="com.android.settings.connecteddevice.audiosharing.AudioSharingActivity"
             android:label="@string/audio_sharing_title"
