Bind action to fragment: adaptive notif settings
Bug: 330608738

Test: send high pri HUN => see edu HUN from sysui
      tap HUN/action => shows adaptive notif settings page,
                        notif menu key highlighted in split screen

Test: adb shell am start-activity -a android.settings.MANAGE_ADAPTIVE_NOTIFICATIONS

Flag: com.android.systemui.notification_avalanche_throttle_hun

Change-Id: I8bc36412b6ce6364887b04d737310e6b01478964

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1427,6 +1427,19 @@
                        android:value="true" />
         </activity>
 
+        <activity
+            android:name=".Settings$ManageAdaptiveNotificationsActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.settings.MANAGE_ADAPTIVE_NOTIFICATIONS"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.notification.PoliteNotificationsPreferenceFragment" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                android:value="@string/menu_key_notifications"/>
+        </activity>
+
         <activity android:name="Settings$WallpaperSettingsActivity"
                   android:label="@string/wallpaper_settings_fragment_title"
                   android:icon="@drawable/ic_wallpaper"
